2001-04-11  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/report-list.scm: Renamed file.
	
	* src/scm/report/account-piecharts.scm: Renamed to this filename
	(used to be: income-or-expense-pie.scm). Introduced some more
	generality such that this file also has an asset and a liability
	balance piechart.

	* src/scm/report/category-barchart.scm: Introduced some
	more generality such that this file also has a asset and liability
	balance barchart.

2001-04-10  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report-utilities.scm: Added function
	(gnc:account-get-type-string-plural). Changed
	gnc:decompose-accountlist to return AccountType symbols.

	* src/scm/html-utilities.scm,
	src/scm/report/net-worth-timeseries.scm, balance-sheet.scm:
	Adapted to changed gnc:decompose-accountlist.

2001-04-10  Dave Peticolas  <dave@krondo.com>

	* src/engine/date.c (__EXTENSIONS__): add a define for solaris

	* src/gnome/dialog-commodities.c: new file. commodity editor.
	unfinished.

2001-04-10  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/net-worth-timeseries.scm: Fixed date argument
	bug. Added auto label rotation.

	* src/scm/date-utilities.scm: Renamed gnc:dateloop to
	gnc:make-date-interval-list and gnc:dateloop-simple to
	gnc:make-date-list.

	* src/scm/report/category-barchart.scm, income-expense-graph.scm:
	Adapt to gnc:dateloop's namechange.

2001-04-10  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/net-worth-timeseries.scm: New file.  You guessed
	it,  a time series net worth barchart.

	* src/scm/report/date-utilities.scm: add gnc:dateloop-simple to
	generate simple timeseries for net worth barchart.

	* src/scm/report/{Makefile.am, report-list.scm}: add new barchart.

2001-04-09  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-price-editor.c: more work

2001-04-09  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/balance-sheet.scm (balance-sheet-renderer):
	use gnc:decompose-accounts to split up accounts.
